# localmemereplybot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-example.txt  image.sh  main.py  pyproject.toml
.github/workflows/: docker-image.yml
