[tool.poetry]
name = "localmemereplybot"
version = "0.1.0"
description = ""
authors = ["Egor Serdiuk <egor.serduck@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {extras = ["speedups"], version = "^2.25.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
